added new colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="banner">
        <div class="half-width">
         <h1>
             Welcome To 
@@ -18,7 +18,8 @@
         <h3> Creating my first professional webpage </h3>
         <p> Hello Im Rahad and this is my first ever professiobnal website.Im really working hard day by day and improving daily.So, keep me in your prayers!!</p>
        </div>     
-       <div class="half-width"> <img src="images/profile1.png" alt="sumon vaiya">  </div> 
+       <div class="half-width"> <img src="images/profile1.png" alt="sumon vaiya"> 
+     </div> 
     </section>
 </body>
 </html>
