--- a/index.html
+++ b/index.html
@@ -14,12 +14,40 @@
         <h1>
             Welcome To 
         </h1>
-        <h1 id="yo">Rahads Website</h1>
+        <h1 class="coloring">Rahads Website</h1>
         <h3> Creating my first professional webpage </h3>
-        <p> Hello Im Rahad and this is my first ever professiobnal website.Im really working hard day by day and improving daily.So, keep me in your prayers!!</p>
+        <p> Hello I'm Rahad and this is my first ever professiobnal website.I'm really working hard day by day and improving daily.So, keep me in your prayers!!</p>
+        <a class="button" target="blank" href="https://www.facebook.com/mdrahadul.islam.7315/"> CONTACT ME</a>
        </div>     
        <div class="half-width"> <img src="images/profile1.png" alt="sumon vaiya"> 
      </div> 
+    </section>
+    <section class="second-phase">
+     <div class="half-width">
+       <img src="images\profile2.png" alt="">
+     </div>
+     <div class="half-width">
+         <h2>Dream Big </h2>
+         <h3>I want o become world's best developer </h3>
+         <p>I have already learned the basic HTML and CSS. I can built any simple website.I am learning Boot-strap now.Using Boot-strap I will make an E-COOMERCE website really soon.</p>
+         <a class="button" target="blank" href="https://www.linkedin.com/in/rahadul-islam-840880224/">DOWNLOAD RESUME</a>
+
+     </div>
+    </section>
+    
+    <section class="exprience-area">
+        <h2>Expriences</h2>
+     <div class="half-width single-exprience">
+          <h2>Full Stack Web Developer</h2>
+          <h3 class="coloring">2020 - Present | Pro Level Web Develop</h3>
+          <p>I mastered HTML and CSS.I'm also currently learning Javascript.I'm learning everything function a website efficiently.I even know the most popular Javascript framework called Vue JS.I even know the deployment,server and security.I will try to give you 100% web solution</p>
+     </div>
+     <div class="half-width single-exprience">
+         <h2>Noob Web Developer</h2>
+         <h3 class="coloring">2020-2021 | Baby Web Developer</h3>
+         <p>I only knew about HTML and didn't know to build a proper website.But then I searched on YT and watched a lot of tutorial videos about Javascript and CSS.Then I learnt to build a proper website.After my H.S.C exam i will seriously invest myself to become a serious web-developer </p>
+
+     </div>
     </section>
 </body>
 </html>
