--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
     
     <section class="exprience-area">
         <h2>Expriences</h2>
-     <div class="half-width single-exprience">
+     <div id="full-stack" class="half-width single-exprience">
           <h2>Full Stack Web Developer</h2>
           <h3 class="coloring">2020 - Present | Pro Level Web Develop</h3>
           <p>I mastered HTML and CSS.I'm also currently learning Javascript.I'm learning everything function a website efficiently.I even know the most popular Javascript framework called Vue JS.I even know the deployment,server and security.I will try to give you 100% web solution</p>
      </div>
-     <div class="half-width single-exprience">
+     <div id="noob-dev" class="half-width single-exprience">
          <h2>Noob Web Developer</h2>
          <h3 class="coloring">2020-2021 | Baby Web Developer</h3>
          <p>I only knew about HTML and didn't know to build a proper website.But then I searched on YT and watched a lot of tutorial videos about Javascript and CSS.Then I learnt to build a proper website.After my H.S.C exam i will seriously invest myself to become a serious web-developer </p>
 
      </div>
     </section>
+    <footer>
+        <p> &copy; Rahadul Islam 2021 | all rights reserved.</p>
+    </footer>
 </body>
 </html>
